[Section2, lection9]=How to Update project#1 to Bootstrap4.x.x[<!--Update the procet #1 to Bootrstap 4.x.x-latest version=>copy-paste the cdn of min.css and min.js(i can also from getbootstrapcdn.com)-->  <!--change the class: col-sm-offset to: offset-sm-1-->  <!--add class: justify-content-center //to center the form-->  <!--add class: mr-1 or mr-2//to add margin-right: 2rem;--><!--change the class to: btn-outline-light//to see clear the button -->  <!--add classes: navbar-expand-sm navbar-dark bg-dark navbar-full//and with .navbar-expand-sm, navbar element will be displayed properly from end-to end-->  <!--change classes to: nabvar-nav mr-auto//margin-right: auto; automatic margin to the right will push right elements to the end-->  <!--change the class: mr-sm-2 or mr-2-->  <!--change the class: btn-outline-success(green with border)--><!--remove :role="listbox"(at carousel)--><!--instead of .card-block, add a class: card-header-->  <!--add a class: btn-outline-light-->  <!--add a class: card-body--><!--add classes: text-white bg-primary text-sm-center, and after this div, add a new div.card-body-->  <!--add classes: card-body text-sm-right bg-warning text-white-->  <!--remove the atributes of <nav>-->in styles.css @media (min-width:576px)//  /*changed this @media-query with flex-flow: wrap(or row wrap);//and that will be added new rows for the items that no longer fit/fill the nav container(in this case, the ul list and the searc/button will go in the 2nd row/line) */;  @media (min-width: 576px) and (max-width:768px)//  /*changed this @media-query from width:auto/min-content to width:100% to can scale, for responsivnes(or max-width:100%)*/

--- a/styles.css
+++ b/styles.css
@@ -48,3 +48,13 @@ img {
     font-size: 0.8rem;
     padding: 2.5rem 0;  /*40px/16px=2.5rem*/
 }
+@media (min-width: 576px) {
+    .navbar-expand-sm {
+    flex-flow: row wrap;   /*changed this @media-query with flex-flow: wrap(or row wrap);//and that will be added new rows for the items that no longer fit/fill the nav container(in this case, the ul list and the searc/button will go in the 2nd row/line) */
+    }
+}
+@media (min-width: 576px) and (max-width:768px) {
+    .form-inline .form-control {
+    width: 100%;     /*changed this @media-query from width:auto to width:100% to can scale, for responsivnes(or max-width:100%)*/
+    }
+}
